@@ -2,6 +2,9 @@ v. 0.17.21
 - add green algae to solid alginic acid
 - fix higher tier bobextended underground belt don't unlock
 - balanced bobextended electronics recipe 
+- balanced clay coke recipe
+- add battery to some science
+- add evolution nullifier
 
 v. 0.17.20
 - decrease overall cost in harder logistic
